Poprawione zadanie_html

--- a/zadanie_html/index.html
+++ b/zadanie_html/index.html
@@ -29,9 +29,11 @@
         </select>
         <br>
         <label>Płeć:</label>
-        <input type="radio" name=plec>Kobieta
+        <input type="radio" name="plec" id="kobieta">
+        <label for="kobieta">Kobieta</label>
         <br>
-        <input type="radio" name=plec>Mężczyzna
+        <input type="radio" name="plec" id="mezczyzna">
+        <label for="mezczyzna">Mężczyzna</label> 
         <br><br>
         <input type="checkbox" id="zgoda" name="zgoda">
         <label for="zgoda">Wyrażam zgodę na przetwarzanie danych osobowych</label>
